main.css
/* ***** variables ***** */

:root {
    --bg: #222;

    --column-gap: 1.25em;
    --row-gap: .75em;
    --duration: .2s;
}

/* ***** basics ***** */

*,
*::before,
*::after {
    box-sizing: border-box;
}

html {
    font-size: 16px;
}

body {
    color: #222;
    font: 1em/1.45 'IBM Plex Sans Condensed', sans-serif;
    background-color: #f3f3f3;
    margin: 0;
    overflow-x: hidden; /* for .full-width */
}

@media screen and (min-width: 1400px) {

    html {
        font-size: 17px;
    }

}

/* ***** elements ***** */

h1 {
    font-size: 2.4em;
    margin: 0;
}

h2 {
    font-size: 1.7em;
    margin: 0 0 .5em;
    text-align: center;
}

h3 {
    font-size: 1.2em;
    margin: 0 0 .3em;
}

h4 {
    font-size: 1.1em;
    margin: 0 0 .4rem;
}

p {
    margin: 0 0 1em;
}

section + section {
    margin: 3em 0 0;
}

hr {
    border: solid #ddd;
    border-width: 1px 0 0 0;
}

h2 + p {
    margin-top: -0.75em;
}

p + section {
    margin-top: 2.5em;
}

abbr {
    font-variant: none; /* override default styles */
    text-decoration: none;
}

/* @media screen and (max-width: 800px) {

    h3 {
        background-color: #ededed;
        -webkit-position: sticky;
        position: sticky;
        top: 0;
        padding: .25em 0;
        z-index: 10;
    }

} */

/* ***** reusable classes ***** */

.constrained-width {
    max-width: 69em;
    padding-left: 3em;
    padding-right: 3em;
    margin-left: auto;
    margin-right: auto;
}

.full-width {
    width: 100vw;
    position: relative;
    left: 50%;
    right: 50%;
    margin-left: -50vw;
    margin-right: -50vw;
}

.uppercase {
    letter-spacing: .06ch;
    text-transform: uppercase;
}

.monospace {
    font-size: .9em;
    font-family: 'IBM Plex Mono', monospace;
}

.subdued {
    color: #777;
}

.tile {
    background-color: white;
    border-radius: .4em;
    padding: .7em 1.25em .9em;
    /* box-shadow: 2px 2px 0 rgba(0,0,0,0.05); */
}

.description {
    text-align: center;
}

@media screen and (max-width: 500px) {

    .constrained-width {
        padding-left: 1em;
        padding-right: 1em;
    }

}

@media screen and (min-width: 501px) and (max-width: 900px) {

    .constrained-width {
        padding-left: 2em;
        padding-right: 2em;
    }

}

/* ***** header ***** */

header {
    background-color: #222;
    color: white;
}

.header-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-top: 5em;
    padding-bottom: 5em;
    line-height: 1;
}

.header-text h1:first-of-type {
    margin-bottom: .2em;
}

.header-text .subdued {
    color: #c6c6c6;
}

.github-link {
    color: white;
    background-color: #444;
    font-weight: bold;
    border-radius: .4em;
    white-space: nowrap;
    text-decoration: none;

    position: relative;
    margin-left: 1em;
    padding: .8em 1.2em;
    transition: background-color .25s ease;
}

.github-link:hover {
    background-color: #515151;
}

/* ***** requirements ***** */

.degree-requirements {
    margin-top: 3em;
}

.requirements {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    column-gap: 1.25em;
}

.requirements.gened h3 {
    grid-column: 1 / 4;
}

.attribute {
    display: flex;
    justify-content: space-between;
}

.attribute + .attribute {
    margin-top: .275em;
}

.attribute-course {
    display: flex;
    align-items: flex-end;
    font-weight: bold;
    white-space: nowrap;
}

/* major/minor */
.major-minor .tile + .tile {
    margin-top: .6em;
}

/* summary */
.section-summary .tile {
    background-color: #ececec;
}

.section-summary hr {
    border-color: #cfcfcf;
}

@media screen and (max-width: 500px) {

    .requirements {
        grid-template-columns: none;
        row-gap: 1.25em;
    }

    .requirements.gened h3 {
        grid-column: 1 / 2;
        margin-bottom: -0.5em;
    }

}

@media screen and (min-width: 501px) and (max-width: 900px) {

    .requirements {
        grid-template-columns: repeat(2, 1fr);
        row-gap: 1.25em;
    }

    .requirements.gened h3 {
        grid-column: 1 / 3;
        margin-bottom: -0.5em;
    }

}

/* ***** years/semesters ***** */

.course-schedule {
    background: #ededed;
    margin-top: 4em;
    padding: 3em 0;
}

.semesters {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-gap: 1.25em;
}

@media screen and (max-width: 700px) {

    .semesters {
        grid-template-columns: none;
    }

}

/* ***** courses ***** */

.course {
    display: flex;
    transition: opacity .25s cubic-bezier(0.33, 1, 0.68, 1);
}

.course + .course {
    margin-top: .6em;
}

.filtered .course {
    opacity: .5;
}

.filtered .course.selected {
    opacity: 1;
}

.course-shorthand {
    display: flex;
    align-items: center;
    width: 3.25ch;
    line-height: 1.2;
    margin-right: 1.1rem;
}

.course-body {
    flex: 1;
    margin-right: 1.1rem;
    min-width: 0; /* for text-overflow: ellipsis */
}

.course-name {
    line-height: 1.2;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
}

.course-link {
    color: #222;
    text-decoration: none;
}

.course-link:hover {
    text-decoration: underline;
}

.course-credits {
    display: flex;
    margin: auto;
    letter-spacing: -0.05ch;
}

@media screen and (max-width: 900px) {

    .course-shorthand {
        display: none;
    }

}

/* ***** pills ***** */

.pill {
    color: rgba(0, 0, 0, .75);
    background-color: #eee;
    font-size: .9em;
    padding: .2em .7em;
    border-radius: 10em;
    transition: background-color .2s cubic-bezier(0.33, 1, 0.68, 1);

    /* reset default <button> styles */
    border: none;
    margin: 0;
    font-family: inherit;
}

.pill:hover {
    background-color: #dfdfdf;
    cursor: pointer;
}

.pill + .pill {
    margin-left: .4em;
}

.pill.selected {
    color: #f8f8f8;
    background-color: #444;
}

.pill.selected:hover {
    background-color: #222;
}

.pill.fake {
    font-size: .925em;
    background-color: #dfdfdf;
    padding: .175em .75em;
    margin: 0 .05em;
    cursor: auto;
}

/* ***** total ***** */

.total {
    display: flex;
    justify-content: flex-end;
    letter-spacing: -0.05ch;
    margin: .75em 1.25em 0 0;
}

.credit-total {
    margin-left: 1.25ch;
}

